Fixing layout issues

--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -6,8 +6,8 @@
   padding-bottom: 60px;
   overflow: hidden;
   @include media-breakpoint-up(md) {
-    padding-top: 140px;
-    padding-bottom: 140px;
+    padding-top: 70px;
+    padding-bottom: 70px;
   }
   h1 {
     color: $black;
@@ -26,7 +26,7 @@
     width: 80%;
     font-size: 1.2rem;
     line-height: 1.4;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     color: $black;
     font-family: $font-family-base;
   }
